Fullscreen elements that were root level elements weren't sized properly.

Avoid setting position absolute on top layer elements that are the
documentElement. This matches what Firefox does.

The root element is special when it is in fullscreen mode because it does
not get the style applied that forces its dimensions and position to be
fixed.

BUG=876339

Change-Id: I42b18047dc9648585bc279510d66decd6d6a4516
Reviewed-on: https://chromium-review.googlesource.com/1186961
Commit-Queue: Dave Tapuska <dtapuska@chromium.org>
Reviewed-by: Rune Lillesveen <futhark@chromium.org>
Cr-Commit-Position: refs/heads/master@{#585830}
Former-commit-id: b80e551ec51c516cd66abe71bd07a672d109f857